Version 1.3.2           2021-12-20

Added
- Basic MQTT support
- Pushover cross platform push messages
- monthly energy consumption API call

Fixed
- Improved developer branch update check

Version 1.3.1           2021-07-28

Added
- now listing all recorded energy meter entries, incl. seach on date and time
- edit charge sessions
- show graphs per charge session
- notifications menu. Auto-dissapearing notifications readable in menu
- start/stop charge sessions from rfid token list
- token list row highlight and edit clickable
- retry odometer read button on charge session page

Fixed
- default avatar if none set
- OS info in settings
- update urllib3 to 1.26.5
- page title
- menu link on small (mobile) screen
- Charge sessions filter had rfid id and name in some occasionsß
- White token name/id and icons in charge sessions highlight

Version 1.3.0           2021-05-31

Added
- 2FA info button, local 2FA bypass per account on account page, command line script to disable 2FA for account
- breadcrumbs removed
- font awesome update to 1.15.3
- vehicle connect icon, wakeup, and hide disconnected vehicle status, vehicle wakeup on data request (i.e. charge status on dashboard)
- user avatar in menu bar, update menu structure, change user avatar in account page

Fixed
- Redirect after login
- Request vehicle status update when enabling
- Webupdate fix and added developer branch update

Version 1.2.9           2021-05-06

Fixed
- Install from front-end failed on stopping the Oppleo service.
- NOTE: Due to changes in the call to the install script (flaskRoutes.py) the install script cannot be run from the front end successfully. Run 'install/install.sh' from the command line in the '/home/pi/Oppleo' folder to apply this update succesfully.


Version 1.2.8           2021-05-06

Fixed
- For development disabled threads re-enabled


Version 1.2.7           2021-05-05

Fixed
- Update version number fixed.